--- a/_config.yml
+++ b/_config.yml
@@ -20,20 +20,25 @@
 
 title: Design Thinking and Data Science 
 email: asliterwebsite@gmail.com
+author: Allison Sliter
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Thinking about design thinking and how that interacts with data science.  Can we use the principles of empathizing with our users, ideating, iterating and evaluating to make better, more elegant data products?
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  allisons
+linkedin_username: allisonsliter
 source: /
 
+markdown:           kramdown
+paginate:           5
+paginate_path:      "/posts/page:num/"
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+  - jekyll-sitemap ## Uncomment this line to silently generate a sitemaps.org compliant sitemap for your Jekyll site
 
 # Exclude from processing.
 # The following items will not be processed, by default.
