--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  allisons
 linkedin_username: allisonsliter
-source: /
+source: 
 
 markdown:           kramdown
 paginate:           5
