--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Design Thinking and Data Science 
+title: Data Science as Design
 email: asliterwebsite@gmail.com
 author: Allison Sliter
 description: >- # this means to ignore newlines until "baseurl:"
